--- a/.gitignore
+++ b/.gitignore
@@ -111,6 +111,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+*venv/
 
 # Spyder project settings
 .spyderproject
@@ -131,3 +132,6 @@ dmypy.json
 .pyre/
 
 .DS_Store
+
+# Bandit
+.bandit
