--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,8 +23,16 @@ repos:
     -   id: requirements-txt-fixer
         always_run: true
 
+-   repo: https://github.com/PyCQA/flake8
+    rev: 3.9.0
+    hooks:
+    -   id: flake8
+        always_run: true
+
 -   repo: https://github.com/PyCQA/bandit
-    rev: 1.6.2
+    rev: 1.7.0
     hooks:
     -   id: bandit
+        exclude: ^tests/
+        args: ["."]
         always_run: true
