--- a/.github/workflows/deploy-check-python.yml
+++ b/.github/workflows/deploy-check-python.yml
@@ -30,17 +30,10 @@ jobs:
     - name: ssh deploy
       uses: easingthemes/ssh-deploy@v2.1.5
       with:
-        # Private Key
-        SSH_PRIVATE_KEY:
-        # Remote host
-        REMOTE_HOST:
-        # Remote user
-        REMOTE_USER:
-        # Remote port
-        REMOTE_PORT: # optional, default is 22
-        # Source directory
-        SOURCE: # optional, default is
-        # Target directory
-        TARGET: # optional, default is /home/REMOTE_USER/
-        # Arguments to pass to rsync
-        ARGS: # optional, default is -rltgoDzvO
+        SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
+        REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+        REMOTE_USER: ${{ secrets.REMOTE_USER }}
+        REMOTE_PORT:
+        SOURCE: "src/"
+        TARGET: ${{ secrets.REMOTE_TARGET }}
+        ARGS: "-rltgoDzvO"
