--- a/.github/workflows/deploy-check-python.yml
+++ b/.github/workflows/deploy-check-python.yml
@@ -30,10 +30,10 @@ jobs:
     - name: ssh deploy
       uses: easingthemes/ssh-deploy@v2.1.5
       with:
-        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+        SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
+        ARGS: "-rltgoDzvO"
+        SOURCE: "src/"
         REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
         REMOTE_USER: ${{ secrets.REMOTE_USER }}
-        REMOTE_PORT:
-        SOURCE: "src/"
         TARGET: ${{ secrets.REMOTE_TARGET }}
-        ARGS: "-rltgoDzvO"
+        EXCLUDE: "/__pycache__/"
