--- a/.github/workflows/deploy-check-python.yml
+++ b/.github/workflows/deploy-check-python.yml
@@ -27,13 +27,25 @@ jobs:
     - name: Test with webtest
       run: |
         python tests/test_main_page.py
-    - name: ssh deploy
-      uses: easingthemes/ssh-deploy@v2.1.5
-      with:
+    - name: Create ssh keys
+      run: |
+        mkdir -p ~/.ssh/
+        echo "$SSH_PRIVATE_KEY" > ../private.key
+        sudo chmod 600 ../private.key
+        echo "$SSH_KNOWN_HOSTS" > ~/.ssh/known_hosts
+      shell: bash
+      env:
         SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
-        ARGS: "-rltgoDzvO"
-        SOURCE: "src/"
+        SSH_KNOWN_HOSTS: ${{ secrets.SSH_KNOWN_HOSTS }}
+        SSH_KEY_PATH: ${{ github.workspace }}/../private.key
+    - name: Deploy on server
+      run: |
+        rsync -avz -e "ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null" \
+        --progress src/ \
+        "$REMOTE_USER"@"$REMOTE_HOST":\
+        "$TARGET"
+      shell: bash
+      env:
         REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
         REMOTE_USER: ${{ secrets.REMOTE_USER }}
         TARGET: ${{ secrets.REMOTE_TARGET }}
-        EXCLUDE: "/__pycache__/"
