--- a/.github/workflows/deploy-check-python.yml
+++ b/.github/workflows/deploy-check-python.yml
@@ -39,7 +39,7 @@ jobs:
         SSH_KNOWN_HOSTS: ${{ secrets.SSH_KNOWN_HOSTS }}
     - name: Deploy on server
       run: |
-        rsync -avz -e "ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=~/.ssh/known_hosts" \
+        rsync -avz -e "ssh -v -o StrictHostKeyChecking=no -o UserKnownHostsFile=~/.ssh/known_hosts" \
         --progress src/ \
         "$REMOTE_USER"@"$REMOTE_HOST":"$TARGET"
       shell: bash
