--- a/.github/workflows/deploy-check-python.yml
+++ b/.github/workflows/deploy-check-python.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
 
     steps:
     - uses: actions/checkout@v2
@@ -28,25 +28,23 @@ jobs:
       run: |
         python tests/test_main_page.py
     - name: Create ssh keys
-      shell: bash
       env:
         SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
         SSH_KNOWN_HOSTS: ${{ secrets.SSH_KNOWN_HOSTS }}
       run: |
         mkdir -p ~/.ssh/
-        echo "${{ env.SSH_PRIVATE_KEY }}" > ~/.ssh/private.key
+        echo "${SSH_PRIVATE_KEY}" > ~/.ssh/private.key
         sudo chmod 600 ~/.ssh/private.key
-        echo "${{ env.SSH_KNOWN_HOSTS }}" > ~/.ssh/known_hosts
+        echo "${SSH_KNOWN_HOSTS}" > ~/.ssh/known_hosts
     - name: Deploy on server
-      shell: bash
       env:
         REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
         REMOTE_USER: ${{ secrets.REMOTE_USER }}
         TARGET: ${{ secrets.REMOTE_TARGET }}
       run: |
-        echo "${{ env.REMOTE_HOST }}"
-        echo "${{ env.REMOTE_USER }}"
-        echo "${{ env.REMOTE_TARGET }}"
+        echo "${REMOTE_HOST}"
+        echo "${REMOTE_USER}"
+        echo "${REMOTE_TARGET}"
         rsync -avz -e "ssh -v -o StrictHostKeyChecking=no -o UserKnownHostsFile=~/.ssh/known_hosts" \
         --progress src/ \
-        "$REMOTE_USER"@"$REMOTE_HOST":"$TARGET"
+        "${REMOTE_USER}"@"${REMOTE_HOST}":"${TARGET}"
