Final fix for workflow

--- a/.github/workflows/deploy-check-python.yml
+++ b/.github/workflows/deploy-check-python.yml
@@ -27,34 +27,21 @@ jobs:
     - name: Test with webtest
       run: |
         python tests/test_main_page.py
-    - name: Testing
-      env:
-        TEST_ENV: ${{ secrets.TEST_ENV_VAR }}
-      run: |
-        echo "${TEST_ENV}"
-        echo "$TEST_ENV"
-        echo "${TEST_ENV}" > test_file1
-        echo "$TEST_ENV" > test_file2
-        cat test_file1
-        cat test_file2
     - name: Create ssh keys
       env:
         SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
         SSH_KNOWN_HOSTS: ${{ secrets.SSH_KNOWN_HOSTS }}
       run: |
         mkdir -p ~/.ssh/
-        echo "${SSH_PRIVATE_KEY}" > ~/.ssh/private.key
+        echo "$SSH_PRIVATE_KEY" > ~/.ssh/private.key
         sudo chmod 600 ~/.ssh/private.key
-        echo "${SSH_KNOWN_HOSTS}" > ~/.ssh/known_hosts
+        echo "$SSH_KNOWN_HOSTS" > ~/.ssh/known_hosts
     - name: Deploy on server
       env:
         REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
         REMOTE_USER: ${{ secrets.REMOTE_USER }}
         TARGET: ${{ secrets.REMOTE_TARGET }}
       run: |
-        echo "${REMOTE_HOST}"
-        echo "${REMOTE_USER}"
-        echo "${REMOTE_TARGET}"
         rsync -avz -e "ssh -v -o StrictHostKeyChecking=no -o UserKnownHostsFile=~/.ssh/known_hosts" \
         --progress src/ \
-        "${REMOTE_USER}"@"${REMOTE_HOST}":"${TARGET}"
+        "$REMOTE_USER"@"$REMOTE_HOST":"$TARGET"
