--- a/.github/workflows/deploy-check-python.yml
+++ b/.github/workflows/deploy-check-python.yml
@@ -42,6 +42,6 @@ jobs:
         REMOTE_USER: ${{ secrets.REMOTE_USER }}
         TARGET: ${{ secrets.REMOTE_TARGET }}
       run: |
-        rsync -avz -e "ssh -v -o StrictHostKeyChecking=no -o UserKnownHostsFile=~/.ssh/known_hosts" \
+        rsync -avz -e "ssh -i ~/.ssh/private.key -o StrictHostKeyChecking=no -o UserKnownHostsFile=~/.ssh/known_hosts" \
         --progress src/ \
         "$REMOTE_USER"@"$REMOTE_HOST":"$TARGET"
