--- a/.github/workflows/deploy-check-python.yml
+++ b/.github/workflows/deploy-check-python.yml
@@ -13,7 +13,7 @@ jobs:
     - id: fetch-latest-release
       uses: thebritican/fetch-latest-release@v2
       with:
-        github_token: ${{ github.token }}
+        github_token: ${{ secrets.DEPLOY_GITHUB_TOKEN }}
 
     - uses: actions/checkout@v2
       with:
