--- a/.github/workflows/deploy-check-python.yml
+++ b/.github/workflows/deploy-check-python.yml
@@ -5,12 +5,12 @@ on:
     types: [ published, deleted ]
 
 jobs:
-  build:
+  deploy_release:
 
     runs-on: ubuntu-18.04
 
     steps:
-    - id: latest
+    - id: fetch-latest-release
       uses: thebritican/fetch-latest-release@v2
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
