--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,11 +1,7 @@
 [uwsgi]
 module = wsgi:app
-
+http-socket = :$(PORT)
 master = true
 processes = 5
-
-socket = mypage.sock
-chmod-socket = 660
-vacuum = true
-
 die-on-term = true
+memory-report = true
